--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -25,6 +25,8 @@
 :test-app-step4: pass:quotes[Use `app_runner` fixture to run the app.]
 :test-app-step5: Verify the result.
 
+Documentation for version: *v0.0.18*.
+
 {corva-sdk} is a framework for building {dev-center} Python apps.
 
 == Install
