Added "Generate docs" docs section

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -387,3 +387,9 @@ coverage run --branch -m pytest ; coverage html --include=src/*,docs/src/*
 ----
 flake8
 ----
+
+=== Generate docs
+[source,console]
+----
+docker run --rm -v $(pwd)/docs/:/documents/ asciidoctor/docker-asciidoctor asciidoctor "*.adoc"
+----
